Fixed copy warning for fy_2017 dataframe

--- a/Thinkful-Prep-Capstone.ipynb
+++ b/Thinkful-Prep-Capstone.ipynb
@@ -749,31 +749,31 @@
        "DEPARTMENT OF FINANCE               9012\n",
        "COMMUNITY COLLEGE (HOSTOS)          8601\n",
        "                                   ...  \n",
-       "BROOKLYN COMMUNITY BOARD #8           14\n",
+       "MANHATTAN COMMUNITY BOARD #12         14\n",
        "STATEN ISLAND COMMUNITY BD #1         14\n",
        "BRONX COMMUNITY BOARD #12             14\n",
-       "QUEENS COMMUNITY BOARD #13            13\n",
        "BROOKLYN COMMUNITY BOARD #11          13\n",
-       "BROOKLYN COMMUNITY BOARD #2           13\n",
        "BRONX COMMUNITY BOARD #4              13\n",
-       "BROOKLYN COMMUNITY BOARD #1           13\n",
-       "QUEENS COMMUNITY BOARD #14            13\n",
-       "BROOKLYN COMMUNITY BOARD #16          13\n",
-       "BRONX COMMUNITY BOARD #8              13\n",
-       "QUEENS COMMUNITY BOARD #11            13\n",
        "BROOKLYN COMMUNITY BOARD #7           13\n",
-       "BRONX COMMUNITY BOARD #9              13\n",
+       "QUEENS COMMUNITY BOARD #13            13\n",
+       "QUEENS COMMUNITY BOARD #11            13\n",
        "BROOKLYN COMMUNITY BOARD #6           13\n",
-       "BROOKLYN COMMUNITY BOARD #18          13\n",
+       "BROOKLYN COMMUNITY BOARD #16          13\n",
        "QUEENS COMMUNITY BOARD #4             13\n",
-       "BROOKLYN COMMUNITY BOARD #3           12\n",
-       "BROOKLYN COMMUNITY BOARD #14          12\n",
+       "BROOKLYN COMMUNITY BOARD #2           13\n",
+       "BROOKLYN COMMUNITY BOARD #1           13\n",
+       "BRONX COMMUNITY BOARD #8              13\n",
+       "BROOKLYN COMMUNITY BOARD #18          13\n",
+       "BRONX COMMUNITY BOARD #9              13\n",
+       "QUEENS COMMUNITY BOARD #14            13\n",
        "MANHATTAN COMMUNITY BOARD #9          12\n",
-       "BRONX COMMUNITY BOARD #2              12\n",
-       "BROOKLYN COMMUNITY BOARD #10          12\n",
        "STATEN ISLAND COMMUNITY BD #3         12\n",
-       "BRONX COMMUNITY BOARD #5              12\n",
        "MANHATTAN COMMUNITY BOARD #7          12\n",
+       "BROOKLYN COMMUNITY BOARD #14          12\n",
+       "BROOKLYN COMMUNITY BOARD #3           12\n",
+       "BRONX COMMUNITY BOARD #5              12\n",
+       "BROOKLYN COMMUNITY BOARD #10          12\n",
+       "BRONX COMMUNITY BOARD #2              12\n",
        "BRONX COMMUNITY BOARD #6              11\n",
        "BROOKLYN COMMUNITY BOARD #9           10\n",
        "BRONX COMMUNITY BOARD #1               9\n",
@@ -1476,16 +1476,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1506,8 +1496,7 @@
     "plt.title('2017 City of New York Agencies with the Highest Salaries')\n",
     "plt.xlabel('Agency')\n",
     "plt.ylabel('Salary ($)')\n",
-    "plt.show()\n",
-    ";\n"
+    "plt.show();\n"
    ]
   },
   {
@@ -1544,16 +1533,6 @@
       "2016 : 66844.81\n",
       "2017 : 69744.82\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1577,8 +1556,7 @@
     "years = list(ave.index)\n",
     "averages = list(ave.values)\n",
     "for i in range(len(years)):\n",
-    "    print('{} : {}'.format(years[i], averages[i].round(2)))\n",
-    ";"
+    "    print('{} : {}'.format(years[i], averages[i].round(2)));"
    ]
   },
   {
@@ -1594,7 +1572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fy_2017 = nyc_active[nyc_active['Fiscal_Year']==2017]\n",
+    "fy_2017 = nyc_active[nyc_active['Fiscal_Year']==2017].copy()\n",
     "top_10_OT_agencies =list(fy_2017.groupby('Agency_Name')['Total_OT_Paid'].sum().sort_values(ascending=False)[:10].index)"
    ]
   },
@@ -1602,22 +1580,10 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/keithlaskay/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fy_2017[\"Filter\"] = fy_2017['Agency_Name'].apply(lambda agency: True if agency in top_10_OT_agencies else False)"
+    "fy_2017[\"Filter\"] = fy_2017['Agency_Name'].apply(\n",
+    "    lambda agency: True if agency in top_10_OT_agencies else False)"
    ]
   },
   {
@@ -1738,10 +1704,7 @@
     "for i in range(len(dept)):\n",
     "    print('{} : {} '.format(dept[i].title(), cnt[i]))\n",
     "print('\\nTotal employees who earned more in overtime then their base salary is deemed to be excessive, and there \\\n",
-    "were {} for the year {}.'.format(high_ot, year))\n",
-    "\n",
-    "#print('\\nFor the year {}, there were {} active employees and {} who had excessive overtime pay, this is %.'\n",
-    "     #,format(emp_2017_idx, emp_tot_2017, high_ot, high_ot/emp_tot_2017))\n"
+    "were {} for the year {}.'.format(high_ot, year))\n"
    ]
   },
   {
